--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
   "devDependencies": {
     "@skpm/builder": "^0.5.2"
   },
-  "author": "Max Oppenheimer <max.oppenheimer@devmynd.com>"
+  "author": "Max Oppenheimer <max.oppenheimer@devmynd.com> and Sarah Aslanifar <sarah.aslanifar@devmynd.com>",
+  "dependencies": {}
 }
