Add in text alignment
There's lots of duplication here, but it works for now

--- a/scssketch.sketchplugin/Contents/Sketch/manifest.json
+++ b/scssketch.sketchplugin/Contents/Sketch/manifest.json
@@ -17,13 +17,19 @@
       "name": "Scale Type Ramp...",
       "identifier": "scale-type-ramp-identifier",
       "script": "scale-type-ramp.js"
+    },
+    {
+      "name": "Align Text...",
+      "identifier": "align-text-identifier",
+      "script": "align-text.js"
     }
   ],
   "menu": {
     "title": "TAND&M Tools",
     "items": [
       "export-to-sass-identifier",
-      "scale-type-ramp-identifier"
+      "scale-type-ramp-identifier",
+      "align-text-identifier"
     ]
   },
   "disableCocoaScriptPreprocessor": true,
