--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "scssketch",
-  "version": "0.1.0",
+  "description" : "Custom tools for living the ultimate the TAND&M life. Built with love and care by Sarah Aslanifar, Drew Vosburg, and Max Oppenheimer",
+  "author": "TAND&M",
+  "version": "1.1",
   "engines": {
     "sketch": ">=3.0"
   },
@@ -12,6 +14,10 @@
       "assets/**/*"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/devmynd/scssketch.git"
+  },
   "scripts": {
     "build": "skpm-build",
     "watch": "skpm-build --watch",
@@ -21,7 +27,6 @@
   "devDependencies": {
     "@skpm/builder": "^0.5.2"
   },
-  "author": "Sarah Aslanifar <sarah.aslanifar@devmynd.com>",
   "dependencies": {
     "lodash": "^4.17.10"
   }
